# switchboard-plug-indicators

./: README.md  com.github.mvbonin.switchboard-plug-indicators_0.1_amd64.deb  meson.build
.github/: FUNDING.yml
debian/: changelog  control  copyright
po/: meson.build
src/: Config.vala.in  Plug.vala  Settings.vala  meson.build
